tests/rosetta/transpiler/Java/conditional-structures-5.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-53443040184/001/Main.java:4: error: not a statement
            null;
            ^
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-53443040184/001/Main.java:6: error: not a statement
            null;
            ^
/tmp/TestJavaTranspiler_Rosetta_Goldenconditional-structures-53443040184/001/Main.java:8: error: not a statement
            null;
            ^
3 errors
