tests/rosetta/transpiler/Java/conditional-structures-5.java
public class Main {
    static void example5(boolean b1, boolean b2) {
        if (b1) {
            null;
        } else         if (b2) {
            null;
        } else {
            null;
        }
    }
    public static void main(String[] args) {
    }
}
